# cpuid2cpuflags

./: .gitignore  Makefile.am  README  configure.ac  cpuinfo2cpuflags-x86.py  meson.build
.github/workflows/: ci.yaml
src/: arm.c  formats.h  hwcap-dump.c  hwcap-mock.c  hwcap.c  hwcap.h  main.c  mock.c  output.c  output.h  platforms.h  ppc.c  x86-dump.c  x86-lib.c  x86-mock.c  x86.c  x86.h
tests/: test.sh
tests/arm/: aarch64-aws-a1.txt  aarch64-cavium-thunderx.txt  aarch64-cavium-thunderx2.txt  aarch64-dragonboard.txt  aarch64-hp-moonshot-xgene-1.txt  aarch64-neoverse-n1.txt  aarch64-odroid-n2.txt  aarch64-raspberry-4.txt  armv5tel-dreamplug.txt  armv6l-raspberry-pi1b.txt  armv7l-beaglebone.txt  armv7l-compulab-utilite-pro.txt  armv7l-jhcloos-cheap.txt  armv7l-odroid-c1.txt  armv7l-raspberry-pi3.txt  armv7l-rk3288.txt  armv7l-scaleway-c1.txt  armv7l-solidrun-cubox.txt  armv8l-neoverse-n1.txt
tests/ppc/: power8.txt  power9.txt
tests/x86/: amd-colfax.txt  amd-zen2.txt  amd-zen4-ryzen-7-pro-7840u.txt  amd-zen4.txt  athlon64-windsor.txt  corei5.txt  opteron-6272.txt  xeon-e-2176g.txt  xeon-platinum-8480plus.txt  xeon-silver-4410.txt
